libtbx.log
*** Error compiling 'libtbx/bundle/copy_runtime_sources.py'...
  File "libtbx/bundle/copy_runtime_sources.py", line 9
    def copy_dist_files((exclude_from_binary_bundle, dist_copy), dirname, names):
                        ^
SyntaxError: invalid syntax

*** Error compiling 'libtbx/command_line/start_binary_bundle.py'...
  File "libtbx/command_line/start_binary_bundle.py", line 40
    os.chmod(install_script, 0755)
                                ^
SyntaxError: invalid token

